--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<meta name="description" content="A neu software technology company on a mission to remove barriers between people and the technology we all use.">
 		<meta name="keywords" content="neu.so, software, company">
 		<meta name="author" content="Codrops">
-		<link rel="shortcut icon" href="./favicon.260c593f.png">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="./base.9e319983.css">
+		<link rel="shortcut icon" href="/favicon.260c593f.png">
+<!-- 		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet"> -->
+		<link rel="stylesheet" type="text/css" href="/base.669e07a5.css">
 		<script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
@@ -45,7 +45,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 
 			<h2 class="heading oh"><span class="oh__inner">We are <strong>neu.so</strong></span></h2>
 			
-			<p class="content-primary">A neu software technology company on a mission to remove barriers between people and the technology we all use. </p>
+			<p class="content-primary">A neu software technology company on a mission to remove barriers between people and the technology we all use.</p>
 			
 			<p class="content-secondary">We're looking for passionate developers to join our team. Email us at hi[at]neu.so</p>
 			
@@ -57,22 +57,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			<section class="details-wrap">
 				<div class="details" id="details-1">
 					<div class="panel">
-						<img class="panel__img pos-1" src="./2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="./3.2740e30c.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="./4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="./5.72367bac.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="./6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="./7.2569df3d.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="./8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="./9.23e0888b.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="./10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="./11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="./12.2b9114f2.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="./13.dc5c1556.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="./14.cb622aec.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="./15.a398b761.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="./16.bd0003b2.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="./17.0391feee.jpg" alt="neu.so image">
+						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/5.72367bac.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/7.2569df3d.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/9.23e0888b.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Textshake</span></h3>
@@ -84,22 +84,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</div>
 				<div class="details" id="details-2">
 					<div class="panel">
-						<img class="panel__img pos-1" src="./18.d983a840.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="./19.0b63093b.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="./20.c9572fc1.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="./21.3e0db3c1.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="./1.a7f18019.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="./2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="./3.2740e30c.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="./4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="./5.72367bac.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="./6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="./7.2569df3d.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="./8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="./9.23e0888b.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="./10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="./11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="./12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-1" src="/18.d983a840.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/20.c9572fc1.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/21.3e0db3c1.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/1.a7f18019.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/3.2740e30c.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/5.72367bac.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/7.2569df3d.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/9.23e0888b.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/12.2b9114f2.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Huntomate</span></h3>
@@ -111,22 +111,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</div>
 				<div class="details" id="details-3">
 					<div class="panel">
-						<img class="panel__img pos-1" src="./21.3e0db3c1.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="./19.0b63093b.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="./17.0391feee.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="./15.a398b761.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="./13.dc5c1556.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="./11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="./2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="./4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="./6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="./8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="./10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="./12.2b9114f2.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="./14.cb622aec.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="./16.bd0003b2.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="./18.d983a840.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="./20.c9572fc1.jpg" alt="neu.so image">
+						<img class="panel__img pos-1" src="/21.3e0db3c1.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/17.0391feee.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/18.d983a840.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/20.c9572fc1.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">User Evaluation</span></h3>
@@ -138,22 +138,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</div>
 				<div class="details" id="details-4">
 					<div class="panel">
-						<img class="panel__img pos-1" src="./2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="./3.2740e30c.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="./4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="./5.72367bac.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="./6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="./7.2569df3d.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="./8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="./9.23e0888b.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="./10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="./11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="./12.2b9114f2.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="./13.dc5c1556.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="./14.cb622aec.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="./15.a398b761.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="./16.bd0003b2.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="./17.0391feee.jpg" alt="neu.so image">
+						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/5.72367bac.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/7.2569df3d.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/9.23e0888b.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Noted.as</span></h3>
@@ -165,22 +165,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</div>
 				<div class="details" id="details-5">
 					<div class="panel">
-						<img class="panel__img pos-1" src="./21.3e0db3c1.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="./19.0b63093b.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="./17.0391feee.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="./15.a398b761.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="./13.dc5c1556.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="./11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="./2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="./4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="./6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="./8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="./10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="./12.2b9114f2.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="./14.cb622aec.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="./16.bd0003b2.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="./18.d983a840.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="./20.c9572fc1.jpg" alt="neu.so image">
+						<img class="panel__img pos-1" src="/21.3e0db3c1.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/17.0391feee.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/18.d983a840.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/20.c9572fc1.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">UX Pickle</span></h3>
@@ -218,6 +218,6 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				<button class="close close--details oh unbutton" aria-label="Close details"><span class="oh__inner">&#10005;</span></button>
 			</section>
 		</main>
-		<script src="./js.a8b1e3d8.js"></script>
+		<script src="/js.a8b1e3d8.js"></script>
 	</body>
 </html>
