--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 
 			<h2 class="heading oh"><span class="oh__inner">We are <strong>neu.so</strong></span></h2>
 			
-			<p class="content-primary">A neu software technology company on a mission to remove barriers between people and the technology we all use.</p>
+			<p class="content-primary">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
 			
 			<p class="content-secondary">We're looking for passionate developers to join our team. Email us at hi[at]neu.so</p>
 			
@@ -184,7 +184,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">UX Pickle</span></h3>
-						<p class="details__content-text">Notes on solving the most popular UX problems.</p>
+						<p class="details__content-text">Strategies for solving the most popular UX problems.</p>
 						<a class="details__content-link oh"><span class="oh__inner">
 						<!-- + Read the story -->
 						</span></a>
