--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<meta name="description" content="A neu software technology company on a mission to remove barriers between people and the technology we all use.">
 		<meta name="keywords" content="neu.so, software, company">
 		<meta name="author" content="Codrops">
-		<link rel="shortcut icon" href="/favicon.260c593f.png">
+		<link rel="shortcut icon" href="/favicon.ca6b330c.png">
 <!-- 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet"> -->
-		<link rel="stylesheet" type="text/css" href="/base.669e07a5.css">
+		<link rel="stylesheet" type="text/css" href="/base.4248de8e.css">
 		<script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
@@ -26,26 +26,32 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 		<main>
 			
 			<div class="frame">
-				<h1 class="frame__title">neu.so &copy; 2021</h1>
+				<h1 class="frame__title">Neu Software LLC &copy; 2021</h1>
 				<nav class="frame__links">
+					<a href="https://linkedin.com/company/neusoftware" target="_blank">LinkedIn</a>
 					<a href="mailto:hi@neu.so">Contact</a>
 				</nav>
 			</div>
 
 			<nav class="menu">
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-1">Textshake</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#uxpickle">UX Pickle</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#noted">Noted</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#textshake">Textshake</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Huntomate</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-3">User Evaluation</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-4">Noted.as</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-5">UX Pickle</a></span>
 				<button class="close close--menu oh unbutton" aria-label="Close menu"><span class="oh__inner">&#10005;</span></button>
 			</nav>
 
 			<button class="menu-link oh unbutton underline"><span class="oh__inner">Products</span></button>
 
-			<h2 class="heading oh"><span class="oh__inner">We are <strong>neu.so</strong></span></h2>
+			<h2 class="heading oh"><span class="oh__inner">
+				<svg width="200" height="62" viewBox="0 0 200 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M117.949 2.68993e-06V20.5128L82.0515 20.5128V0L117.949 2.68993e-06ZM20.5128 20.5128L41.0256 20.5128L41.0256 61.5385H61.5385V20.5128V2.68993e-06L0 0V20.5128L3.51667e-06 61.5385H20.5128V20.5128ZM117.949 61.5384V41.0255L82.0515 41.0255V61.5384L117.949 61.5384ZM200 2.68993e-06H179.487V41.0256L158.974 41.0256L158.974 2.68993e-06H138.462V41.0256V61.5385H179.487H200V41.0256V2.68993e-06Z" fill="white"></path>
+				</svg>
+			</span></h2>
 			
-			<p class="content-primary">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
+			<p class="content-primary aheader">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
 			
 			<p class="content-secondary">We're looking for passionate developers to join our team. Email us at hi[at]neu.so</p>
 			
@@ -55,7 +61,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</div>
 			
 			<section class="details-wrap">
-				<div class="details" id="details-1">
+				<div class="details" id="textshake">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
@@ -82,13 +88,40 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						</span></a>
 					</div>
 				</div>
+				<div class="details" id="wordsniff">
+					<div class="panel">
+						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/5.72367bac.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/7.2569df3d.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/9.23e0888b.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
+					</div>
+					<div class="details__content">
+						<h3 class="details__content-title oh"><span class="oh__inner">Wordsniff</span></h3>
+						<p class="details__content-text">Write blogs, website content and more with an AI copy writer</p>
+						<a class="details__content-link oh" href="https://textshake.com"><span class="oh__inner">
+						<!-- + Visit Textshake -->
+						</span></a>
+					</div>
+				</div>
 				<div class="details" id="details-2">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/18.d983a840.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
 						<img class="panel__img pos-3" src="/20.c9572fc1.jpg" alt="neu.so image">
 						<img class="panel__img pos-4" src="/21.3e0db3c1.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="/1.a7f18019.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/1.47d0ab09.jpg" alt="neu.so image">
 						<img class="panel__img pos-6" src="/2.f82fdd37.jpg" alt="neu.so image">
 						<img class="panel__img pos-7" src="/3.2740e30c.jpg" alt="neu.so image">
 						<img class="panel__img pos-8" src="/4.bf4c6e70.jpg" alt="neu.so image">
@@ -136,7 +169,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						</span></a>
 					</div>
 				</div>
-				<div class="details" id="details-4">
+				<div class="details" id="noted">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
@@ -156,14 +189,14 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Noted.as</span></h3>
+						<h3 class="details__content-title oh"><span class="oh__inner">Noted</span></h3>
 						<p class="details__content-text">Capture notes and ideas, and share them with anyone.</p>
-						<a class="details__content-link oh"><span class="oh__inner">
+						<a class="details__content-link oh" target="_blank" href="https://noted.as"><span class="oh__inner">
 						<!-- + Read the story -->
 						</span></a>
 					</div>
 				</div>
-				<div class="details" id="details-5">
+				<div class="details" id="uxpickle">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/21.3e0db3c1.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
@@ -184,9 +217,9 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">UX Pickle</span></h3>
-						<p class="details__content-text">Strategies for solving the most popular UX problems.</p>
-						<a class="details__content-link oh"><span class="oh__inner">
-						<!-- + Read the story -->
+						<p class="details__content-text">Strategies for solving the most wicked UX problems.</p>
+						<a class="details__content-link oh" href="https://uxpickle.com" target="_blank"><span class="oh__inner">
+						+ Visit Blog
 						</span></a>
 					</div>
 				</div>
