--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>neu</title>
-		<meta name="description" content="A neu software technology company on a mission to remove barriers between people and the technology we all use.">
+		<meta name="description" content="A (neu) software technology company on a mission to remove barriers between people and the technology we all use.">
 		<meta name="keywords" content="neu.so, software, company">
-		<meta name="author" content="Codrops">
+		<meta name="author" content="Neu Software LLC">
 		<link rel="shortcut icon" href="/favicon.ca6b330c.png">
-<!-- 		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet"> -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/base.4248de8e.css">
 		<script>document.documentElement.className = "js";
 
@@ -21,6 +21,16 @@ var supportsCssVars = function supportsCssVars() {
 };
 
 supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-210183255-1"></script>
+		<script>window.dataLayer = window.dataLayer || [];
+
+function gtag() {
+  dataLayer.push(arguments);
+}
+
+gtag('js', new Date());
+gtag('config', 'UA-210183255-1');</script>
 	</head>
 	<body class="loading">
 		<main>
@@ -223,31 +233,6 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						</span></a>
 					</div>
 				</div>
-<!-- 				<div class="details" id="details-6">
-					<div class="panel">
-						<img class="panel__img pos-1" src="img/18.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-2" src="img/19.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-3" src="img/20.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-4" src="img/21.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-5" src="img/1.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-6" src="img/2.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-7" src="img/3.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-8" src="img/4.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-9" src="img/5.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-10" src="img/6.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-11" src="img/7.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-12" src="img/8.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-13" src="img/9.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-14" src="img/10.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-15" src="img/11.jpg" alt="neu.so image"/>
-						<img class="panel__img pos-16" src="img/12.jpg" alt="neu.so image"/>
-					</div>
-					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Ganymede</span></h3>
-						<p class="details__content-text">Incredible as this seems to our ordinary ideas, it is undoubtedly an understatement rather than an exaggeration of the true proportion as observed in the case of koilon.</p>
-						<a class="details__content-link oh"><span class="oh__inner">+ Read the story</span></a>
-					</div>
-				</div> -->
 				<button class="close close--details oh unbutton" aria-label="Close details"><span class="oh__inner">&#10005;</span></button>
 			</section>
 		</main>
