Revert "Font issue"
This reverts commit 4c085492245ff8fed3689b8fbbb4c6bd57040f63.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ gtag('config', 'UA-210183255-1');</script>
 				</svg>
 			</span></h2>
 			
-			<p class="content-primary">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
+			<p class="content-primary aheader">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
 			
 			<p class="content-secondary">We're looking for passionate developers to join our team. Email us at hi[at]neu.so</p>
 			
@@ -236,6 +236,6 @@ gtag('config', 'UA-210183255-1');</script>
 				<button class="close close--details oh unbutton" aria-label="Close details"><span class="oh__inner">&#10005;</span></button>
 			</section>
 		</main>
-		<script src="/js.2fa06326.js"></script>
+		<script src="/js.a8b1e3d8.js"></script>
 	</body>
 </html>
