--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<meta name="keywords" content="neu.so, software, company">
 		<meta name="author" content="Neu Software LLC">
 		<link rel="shortcut icon" href="/favicon.ca6b330c.png">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="/base.4248de8e.css">
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet"> -->
+		<link rel="stylesheet" type="text/css" href="/base.7a761df6.css">
 		<script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
@@ -61,7 +61,7 @@ gtag('config', 'UA-210183255-1');</script>
 				</svg>
 			</span></h2>
 			
-			<p class="content-primary aheader">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
+			<p class="content-primary">A (neu) software technology company on a mission to remove barriers between people and the technology we all use.</p>
 			
 			<p class="content-secondary">We're looking for passionate developers to join our team. Email us at hi[at]neu.so</p>
 			
@@ -236,6 +236,6 @@ gtag('config', 'UA-210183255-1');</script>
 				<button class="close close--details oh unbutton" aria-label="Close details"><span class="oh__inner">&#10005;</span></button>
 			</section>
 		</main>
-		<script src="/js.a8b1e3d8.js"></script>
+		<script src="/js.580e19cc.js"></script>
 	</body>
 </html>
