--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ gtag('config', 'UA-210183255-1');</script>
 						<h3 class="details__content-title oh"><span class="oh__inner">Noted</span></h3>
 						<p class="details__content-text">Capture notes and ideas, and share them with anyone.</p>
 						<a class="details__content-link oh" target="_blank" href="https://noted.as"><span class="oh__inner">
-						<!-- + Read the story -->
+						+ Start a Note
 						</span></a>
 					</div>
 				</div>
