--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ gtag('config', 'UA-210183255-1');</script>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#noted">Noted</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#textshake">Textshake</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Huntomate</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Marmalade</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-3">User Evaluation</a></span>
 				<button class="close close--menu oh unbutton" aria-label="Close menu"><span class="oh__inner">&#10005;</span></button>
 			</nav>
@@ -145,7 +145,7 @@ gtag('config', 'UA-210183255-1');</script>
 						<img class="panel__img pos-16" src="/12.2b9114f2.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Huntomate</span></h3>
+						<h3 class="details__content-title oh"><span class="oh__inner">Marmalade</span></h3>
 						<p class="details__content-text">An all-in-one tool to automate prospecting.</p>
 						<a class="details__content-link oh"><span class="oh__inner">
 						<!-- + Read the story -->
@@ -202,7 +202,7 @@ gtag('config', 'UA-210183255-1');</script>
 						<h3 class="details__content-title oh"><span class="oh__inner">Noted</span></h3>
 						<p class="details__content-text">Capture notes and ideas, and share them with anyone.</p>
 						<a class="details__content-link oh" target="_blank" href="https://noted.as"><span class="oh__inner">
-						+ Start a Note
+						<!-- + Read the story -->
 						</span></a>
 					</div>
 				</div>
