--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ gtag('config', 'UA-210183255-1');</script>
 			</div>
 
 			<nav class="menu">
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#uxpickle">UX Pickle</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#noted">Noted</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#textshake">Textshake</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Marmalade</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-3">User Evaluation</a></span>
@@ -120,8 +120,8 @@ gtag('config', 'UA-210183255-1');</script>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Wordsniff</span></h3>
 						<p class="details__content-text">Write blogs, website content and more with an AI copy writer</p>
-						<a class="details__content-link oh" href="https://textshake.com"><span class="oh__inner">
-						<!-- + Visit Textshake -->
+						<a class="details__content-link oh" href="https://wordsniff.com"><span class="oh__inner">
+						+ Start Writing
 						</span></a>
 					</div>
 				</div>
