--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ gtag('config', 'UA-210183255-1');</script>
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Wordsniff</span></h3>
-						<p class="details__content-text">Write blogs, website content and more with an AI copy writer</p>
+						<p class="details__content-text">Write blogs, website content and more with an AI copywriter</p>
 						<a class="details__content-link oh" href="https://wordsniff.com"><span class="oh__inner">
 						+ Start Writing
 						</span></a>
@@ -202,7 +202,7 @@ gtag('config', 'UA-210183255-1');</script>
 						<h3 class="details__content-title oh"><span class="oh__inner">Noted</span></h3>
 						<p class="details__content-text">Capture notes and ideas, and share them with anyone.</p>
 						<a class="details__content-link oh" target="_blank" href="https://noted.as"><span class="oh__inner">
-						<!-- + Read the story -->
+						+ Start a New Note
 						</span></a>
 					</div>
 				</div>
