--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 		<meta name="keywords" content="neu.so, software, company">
 		<meta name="author" content="Neu Software LLC">
 		<link rel="shortcut icon" href="/favicon.ca6b330c.png">
-		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet"> -->
 		<link rel="stylesheet" type="text/css" href="/base.7a761df6.css">
 		<script>document.documentElement.className = "js";
 
@@ -36,7 +33,7 @@ gtag('config', 'UA-210183255-1');</script>
 		<main>
 			
 			<div class="frame">
-				<h1 class="frame__title">Neu Software LLC &copy; 2021</h1>
+				<h1 class="frame__title">Neu Software LLC &copy; 2021-22</h1>
 				<nav class="frame__links">
 					<a href="https://linkedin.com/company/neusoftware" target="_blank">LinkedIn</a>
 					<a href="mailto:hi@neu.so">Contact</a>
@@ -44,9 +41,8 @@ gtag('config', 'UA-210183255-1');</script>
 			</div>
 
 			<nav class="menu">
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#uxpickle">UX Pickle</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#noted">Noted</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#textshake">Textshake</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Marmalade</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-3">User Evaluation</a></span>
@@ -176,33 +172,6 @@ gtag('config', 'UA-210183255-1');</script>
 						<p class="details__content-text">Let your users evaluate your product.</p>
 						<a class="details__content-link oh"><span class="oh__inner">
 						<!-- + Read the story -->
-						</span></a>
-					</div>
-				</div>
-				<div class="details" id="noted">
-					<div class="panel">
-						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="/4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="/5.72367bac.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="/6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="/7.2569df3d.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="/8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="/9.23e0888b.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="/10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="/11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="/12.2b9114f2.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="/13.dc5c1556.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="/15.a398b761.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="/16.bd0003b2.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
-					</div>
-					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Noted</span></h3>
-						<p class="details__content-text">Capture notes and ideas, and share them with anyone.</p>
-						<a class="details__content-link oh" target="_blank" href="https://noted.as"><span class="oh__inner">
-						+ Start a New Note
 						</span></a>
 					</div>
 				</div>
