--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ gtag('config', 'UA-210183255-1');</script>
 		<main>
 			
 			<div class="frame">
-				<h1 class="frame__title">Neu Software LLC &copy; 2021-22</h1>
+				<h1 class="frame__title">Neu Software LLC &copy; 2021-23</h1>
 				<nav class="frame__links">
 					<a href="https://linkedin.com/company/neusoftware" target="_blank">LinkedIn</a>
 					<a href="mailto:hi@neu.so">Contact</a>
@@ -41,11 +41,10 @@ gtag('config', 'UA-210183255-1');</script>
 			</div>
 
 			<nav class="menu">
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#userevaluation">User Evaluation</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#circlechat">CircleChat</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#uxpickle">UX Pickle</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#textshake">Textshake</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-2">Marmalade</a></span>
-				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#details-3">User Evaluation</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff (Exited)</a></span>
 				<button class="close close--menu oh unbutton" aria-label="Close menu"><span class="oh__inner">&#10005;</span></button>
 			</nav>
 
@@ -67,7 +66,7 @@ gtag('config', 'UA-210183255-1');</script>
 			</div>
 			
 			<section class="details-wrap">
-				<div class="details" id="textshake">
+				<div class="details" id="circlechat">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
@@ -87,9 +86,9 @@ gtag('config', 'UA-210183255-1');</script>
 						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
 					</div>
 					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Textshake</span></h3>
-						<p class="details__content-text">An interface to quickly analyse text data such as user reviews using natural language processing (NLP).</p>
-						<a class="details__content-link oh" href="https://textshake.com"><span class="oh__inner">
+						<h3 class="details__content-title oh"><span class="oh__inner">CircleChat</span></h3>
+						<p class="details__content-text">Chat and brainstorm with AI agents to get different perspectives</p>
+						<a class="details__content-link oh" href="https://circlechat.co"><span class="oh__inner">
 						<!-- + Visit Textshake -->
 						</span></a>
 					</div>
@@ -115,40 +114,13 @@ gtag('config', 'UA-210183255-1');</script>
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Wordsniff</span></h3>
-						<p class="details__content-text">Write blogs, website content and more with an AI copywriter</p>
+						<p class="details__content-text">Write blogs, website content and more with an AI copywriter. This product has been acquired.</p>
 						<a class="details__content-link oh" href="https://wordsniff.com"><span class="oh__inner">
 						+ Start Writing
 						</span></a>
 					</div>
 				</div>
-				<div class="details" id="details-2">
-					<div class="panel">
-						<img class="panel__img pos-1" src="/18.d983a840.jpg" alt="neu.so image">
-						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
-						<img class="panel__img pos-3" src="/20.c9572fc1.jpg" alt="neu.so image">
-						<img class="panel__img pos-4" src="/21.3e0db3c1.jpg" alt="neu.so image">
-						<img class="panel__img pos-5" src="/1.47d0ab09.jpg" alt="neu.so image">
-						<img class="panel__img pos-6" src="/2.f82fdd37.jpg" alt="neu.so image">
-						<img class="panel__img pos-7" src="/3.2740e30c.jpg" alt="neu.so image">
-						<img class="panel__img pos-8" src="/4.bf4c6e70.jpg" alt="neu.so image">
-						<img class="panel__img pos-9" src="/5.72367bac.jpg" alt="neu.so image">
-						<img class="panel__img pos-10" src="/6.593aea13.jpg" alt="neu.so image">
-						<img class="panel__img pos-11" src="/7.2569df3d.jpg" alt="neu.so image">
-						<img class="panel__img pos-12" src="/8.79def5cf.jpg" alt="neu.so image">
-						<img class="panel__img pos-13" src="/9.23e0888b.jpg" alt="neu.so image">
-						<img class="panel__img pos-14" src="/10.11889f7f.jpg" alt="neu.so image">
-						<img class="panel__img pos-15" src="/11.bfdd54ca.jpg" alt="neu.so image">
-						<img class="panel__img pos-16" src="/12.2b9114f2.jpg" alt="neu.so image">
-					</div>
-					<div class="details__content">
-						<h3 class="details__content-title oh"><span class="oh__inner">Marmalade</span></h3>
-						<p class="details__content-text">An all-in-one tool to automate prospecting.</p>
-						<a class="details__content-link oh"><span class="oh__inner">
-						<!-- + Read the story -->
-						</span></a>
-					</div>
-				</div>
-				<div class="details" id="details-3">
+				<div class="details" id="userevaluation">
 					<div class="panel">
 						<img class="panel__img pos-1" src="/21.3e0db3c1.jpg" alt="neu.so image">
 						<img class="panel__img pos-2" src="/19.0b63093b.jpg" alt="neu.so image">
