--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ gtag('config', 'UA-210183255-1');</script>
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">CircleChat</span></h3>
-						<p class="details__content-text">Chat and brainstorm with AI agents to get different perspectives</p>
-						<a class="details__content-link oh" href="https://circlechat.co"><span class="oh__inner">
-						<!-- + Visit Textshake -->
+						<p class="details__content-text">Chat and brainstorm with AI agents to get different perspectives.</p>
+						<a class="details__content-link oh" href="https://circlechat.co" target="_blank"><span class="oh__inner">
+						+ Try CircleChat
 						</span></a>
 					</div>
 				</div>
@@ -115,8 +115,8 @@ gtag('config', 'UA-210183255-1');</script>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">Wordsniff</span></h3>
 						<p class="details__content-text">Write blogs, website content and more with an AI copywriter. This product has been acquired.</p>
-						<a class="details__content-link oh" href="https://wordsniff.com"><span class="oh__inner">
-						+ Start Writing
+						<a class="details__content-link oh" href="#"><span class="oh__inner">
+						<!-- + Start Writing -->
 						</span></a>
 					</div>
 				</div>
@@ -141,9 +141,9 @@ gtag('config', 'UA-210183255-1');</script>
 					</div>
 					<div class="details__content">
 						<h3 class="details__content-title oh"><span class="oh__inner">User Evaluation</span></h3>
-						<p class="details__content-text">Let your users evaluate your product.</p>
-						<a class="details__content-link oh"><span class="oh__inner">
-						<!-- + Read the story -->
+						<p class="details__content-text">Analyze user conversations using powerful AI models.</p>
+						<a class="details__content-link oh" hred="https://userevaluation.com" target="_blank"><span class="oh__inner">
+						+ Try User Evaluation
 						</span></a>
 					</div>
 				</div>
