--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ gtag('config', 'UA-210183255-1');</script>
 
 			<nav class="menu">
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#userevaluation">User Evaluation</a></span>
+				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#limeline">Limeline</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#circlechat">CircleChat</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#uxpickle">UX Pickle</a></span>
 				<span class="menu__item oh"><a class="menu__item-link oh__inner" href="#wordsniff">Wordsniff (Exited)</a></span>
@@ -117,6 +118,33 @@ gtag('config', 'UA-210183255-1');</script>
 						<p class="details__content-text">Write blogs, website content and more with an AI copywriter. This product has been acquired.</p>
 						<a class="details__content-link oh" href="#"><span class="oh__inner">
 						<!-- + Start Writing -->
+						</span></a>
+					</div>
+				</div>
+				<div class="details" id="limeline">
+					<div class="panel">
+						<img class="panel__img pos-1" src="/2.f82fdd37.jpg" alt="neu.so image">
+						<img class="panel__img pos-2" src="/3.2740e30c.jpg" alt="neu.so image">
+						<img class="panel__img pos-3" src="/4.bf4c6e70.jpg" alt="neu.so image">
+						<img class="panel__img pos-4" src="/5.72367bac.jpg" alt="neu.so image">
+						<img class="panel__img pos-5" src="/6.593aea13.jpg" alt="neu.so image">
+						<img class="panel__img pos-6" src="/7.2569df3d.jpg" alt="neu.so image">
+						<img class="panel__img pos-7" src="/8.79def5cf.jpg" alt="neu.so image">
+						<img class="panel__img pos-8" src="/9.23e0888b.jpg" alt="neu.so image">
+						<img class="panel__img pos-9" src="/10.11889f7f.jpg" alt="neu.so image">
+						<img class="panel__img pos-10" src="/11.bfdd54ca.jpg" alt="neu.so image">
+						<img class="panel__img pos-11" src="/12.2b9114f2.jpg" alt="neu.so image">
+						<img class="panel__img pos-12" src="/13.dc5c1556.jpg" alt="neu.so image">
+						<img class="panel__img pos-13" src="/14.cb622aec.jpg" alt="neu.so image">
+						<img class="panel__img pos-14" src="/15.a398b761.jpg" alt="neu.so image">
+						<img class="panel__img pos-15" src="/16.bd0003b2.jpg" alt="neu.so image">
+						<img class="panel__img pos-16" src="/17.0391feee.jpg" alt="neu.so image">
+					</div>
+					<div class="details__content">
+						<h3 class="details__content-title oh"><span class="oh__inner">Limeline</span></h3>
+						<p class="details__content-text">Let AI take all your meetings</p>
+						<a class="details__content-link oh" href="https://limeline.ai" target="_blank"><span class="oh__inner">
+						+ Setup AI Meetings
 						</span></a>
 					</div>
 				</div>
